tools/KLEE_SOURCE/Release+Asserts/bin/temp_test/klee-out-1/test000001.exec.err
Error: external call with symbolic argument: printf
File: /home/qirong/Desktop/integer_overflow.c
Line: 9
Stack: 
	#0 00000029 in loop (a) at /home/qirong/Desktop/integer_overflow.c:9
	#1 00000055 in main () at /home/qirong/Desktop/integer_overflow.c:24
