tools/KLEE_SOURCE/Release+Asserts/bin/temp_test/klee-out-1/test000001.pc
array a1[4] : w32 -> w8 = symbolic
(query [(Eq false
            (Slt 0
                 (ReadLSB w32 0 a1)))]
       false)
